Update About/workplace and fix nav style to be visible over text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,6 +145,7 @@ nav {
     position: relative;
     counter-increment: item 1;
     font-size: var(--fz-xs);
+    background-color: var(--bg-light);
 }
 
 .d-none {
